--- a/Day01-Expanding Cards/style.css
+++ b/Day01-Expanding Cards/style.css
@@ -16,7 +16,7 @@ body {
   width: 90vw;
 }
 .panel {
-  background-size: auto 100%;
+  background-size: auto 40rem;
   background-position: center;
   background-repeat: no-repeat;
   height: 80vh;
